.k8s/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: crud-app
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
  selector:
    app: web
